finished last section, missing to fix some details

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,6 @@
   transform: translateY(-300px);
 }
 
-.slide-down.closed {
-  transform: translateY(300px);
+.paragraph.select-selected {
+  color: #aaa;
 }
